完成全部功能的实现，等待@helpers的进一步完善

--- a/Sheng.Enterprise.Web/App_Code/Helpers.cshtml
+++ b/Sheng.Enterprise.Web/App_Code/Helpers.cshtml
@@ -15,3 +15,10 @@
 {
     @title
 }
+
+@helper PersonSelector(string domId, string id, string name, Guid domainId, string domainName, bool chooseButton = true)
+{
+    @name
+}
+
+@function
