--- a/Sheng.Enterprise.Web/Views/Home/Login.cshtml
+++ b/Sheng.Enterprise.Web/Views/Home/Login.cshtml
@@ -154,7 +154,7 @@
                         <td height="15" ></td>
                     </tr>
                     <tr>
-                        <td><span><a href="~/Home/ResetPassword" class="a_blue_15">找回密码</a></span><span style="margin-left:30px;"><a target="_blank" class="a_blue_15" href="http://docs.zkebao.com/Home/Browser/WeeklyReport">系统说明书</a></span></td>
+                        <td><span><a href="~/Home/ResetPassword" class="a_blue_15">找回密码</a></span><span style="margin-left:30px;"><a target="_blank" class="a_blue_15" href="/Home/Browser/WeeklyReport">系统说明书</a></span></td>
                     </tr>
                 </table>
                 </form>
