--- a/Sheng.Enterprise.Web/Views/Home/ResetPassword.cshtml
+++ b/Sheng.Enterprise.Web/Views/Home/ResetPassword.cshtml
@@ -10,7 +10,7 @@
     {
         $("[keyenter]").keypress(function (e)
         {
-            if (e.keyCode == 13)
+            if (e.keyCode === 13)
             {
                 resetPassword();
             }
