--- a/Sheng.Enterprise.Web/Views/Shared/_LayoutSimpleWithMainMenu.cshtml
+++ b/Sheng.Enterprise.Web/Views/Shared/_LayoutSimpleWithMainMenu.cshtml
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div id="divContainer" style="OVERFLOW-Y: auto; ">
+    <div id="divContainer" style="overflow-y: auto; ">
         @RenderBody()
     </div>
 
