--- a/Sheng.Enterprise.Web/Views/WeeklyReport/Post.cshtml
+++ b/Sheng.Enterprise.Web/Views/WeeklyReport/Post.cshtml
@@ -478,7 +478,7 @@
 
 </script>
 
-@Helpers.TitleWithDate("填写", this.ViewBag)
+@CustomerHelper.TitleWithDate("填写", this.ViewBag)
 <div style="margin-top: 20px; height: 50px; background: #D8E6ED">
     <div style="float: left; margin-left: 20px; margin-right: 20px">
         <table border="0" cellspacing="0" cellpadding="0" height="50">
