--- a/Sheng.Enterprise.Web/Views/WeeklyReport/ReportByOrganization.cshtml
+++ b/Sheng.Enterprise.Web/Views/WeeklyReport/ReportByOrganization.cshtml
@@ -44,7 +44,7 @@
 </script>
 
     <div style="margin-right:20px; margin-bottom:20px;">
-        @CustomerHelper.TitleWithDate("统计", this.ViewBag)
+        @Helpers.TitleWithDate("统计", this.ViewBag)
         <div style="margin-top:20px">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tr>
@@ -68,7 +68,7 @@
                 组织架构：
             </div>
             <div style="float:left; margin-left:20px;">
-                @CustomerHelper.OrganizationSelector("organizationSelector", null, null, ViewBag.RootOrganization.Id, ViewBag.RootOrganization.Name)
+                @Helpers.OrganizationSelector("organizationSelector", null, null, ViewBag.RootOrganization.Id, ViewBag.RootOrganization.Name)
             </div>
         </div>
 
