--- a/Sheng.Enterprise.Web/Views/WeeklyReport/ReportBySubmit.cshtml
+++ b/Sheng.Enterprise.Web/Views/WeeklyReport/ReportBySubmit.cshtml
@@ -83,7 +83,7 @@
 
 </script>
 <div style="margin-right:20px;margin-bottom:20px;">
-    @CustomerHelper.TitleWithDate("提交情况", this.ViewBag)
+    @Helpers.TitleWithDate("提交情况", this.ViewBag)
     <div style="margin-top:20px">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
@@ -106,7 +106,7 @@
             组织架构：
         </div>
         <div style="float:left; margin-left:20px;">
-            @CustomerHelper.OrganizationSelector("organizationSelector", null, null, ViewBag.RootOrganization.Id, ViewBag.RootOrganization.Name)
+            @Helpers.OrganizationSelector("organizationSelector", null, null, ViewBag.RootOrganization.Id, ViewBag.RootOrganization.Name)
         </div>
         <div style="float:left; line-height:34px;margin-left:20px;">
             <input name="btnSearch" type="button" class="btn_blue" id="btnSearch" value="查询" onclick="search()" />
